// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VersionsTabButton renders default 1`] = `

<gui-tabs-trigger
  variant="ghost"
  value="versions"
  classname="w-fit px-2"
>
  Versions
  <gui-inline-code
    variant="mono"
    classname="ml-1 inline-flex h-[1.25rem] min-w-[1.25rem] items-center justify-center text-center"
  >
    3
  </gui-inline-code>
</gui-tabs-trigger>

`;

exports[`VersionsTabContent filters newer versions 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 border-b-[1px] border-muted pb-1">
      <div class="flex cursor-default justify-between">
        <div class="flex flex-col gap-0.5">
          <gui-tooltip-provider>
            <h3 class="inline-flex items-center gap-1 align-baseline text-base font-medium text-foreground">
              Package Downloads
              <gui-tooltip>
                <gui-tooltip-trigger aschild="true">
                  <span class="cursor-default text-muted-foreground">
                    <gui-circle-help-icon
                      strokewidth="2"
                      size="16"
                    >
                    </gui-circle-help-icon>
                  </span>
                </gui-tooltip-trigger>
                <gui-tooltip-content classname="font-normal">
                  Downloads across all package versions
                </gui-tooltip-content>
              </gui-tooltip>
            </h3>
          </gui-tooltip-provider>
          <p class="font-mono text-xs text-muted-foreground">
            600
          </p>
        </div>
        <p class="align-baseline text-sm text-muted-foreground">
          2025-04-15 - 2025-04-15
        </p>
      </div>
      <gui-chart-container
        config="[object Object]"
        classname="h-[200px] w-full"
      >
        <gui-recharts-bar-chart
          accessibilitylayer="true"
          data="[object Object]"
        >
          <gui-recharts-cartesian-grid vertical="false">
          </gui-recharts-cartesian-grid>
          <gui-chart-tooltip content="[object Object]">
          </gui-chart-tooltip>
          <gui-recharts-bar
            datakey="downloads"
            fill="var(--color-downloads)"
            radius="4"
          >
          </gui-recharts-bar>
          <gui-recharts-x-axis
            datakey="month"
            tickline="false"
            axisline="false"
            tickmargin="8"
            mintickgap="32"
          >
          </gui-recharts-x-axis>
        </gui-recharts-bar-chart>
      </gui-chart-container>
    </div>
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;

exports[`VersionsTabContent filters pre-releases 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 border-b-[1px] border-muted pb-1">
      <div class="flex cursor-default justify-between">
        <div class="flex flex-col gap-0.5">
          <gui-tooltip-provider>
            <h3 class="inline-flex items-center gap-1 align-baseline text-base font-medium text-foreground">
              Package Downloads
              <gui-tooltip>
                <gui-tooltip-trigger aschild="true">
                  <span class="cursor-default text-muted-foreground">
                    <gui-circle-help-icon
                      strokewidth="2"
                      size="16"
                    >
                    </gui-circle-help-icon>
                  </span>
                </gui-tooltip-trigger>
                <gui-tooltip-content classname="font-normal">
                  Downloads across all package versions
                </gui-tooltip-content>
              </gui-tooltip>
            </h3>
          </gui-tooltip-provider>
          <p class="font-mono text-xs text-muted-foreground">
            600
          </p>
        </div>
        <p class="align-baseline text-sm text-muted-foreground">
          2025-04-15 - 2025-04-15
        </p>
      </div>
      <gui-chart-container
        config="[object Object]"
        classname="h-[200px] w-full"
      >
        <gui-recharts-bar-chart
          accessibilitylayer="true"
          data="[object Object]"
        >
          <gui-recharts-cartesian-grid vertical="false">
          </gui-recharts-cartesian-grid>
          <gui-chart-tooltip content="[object Object]">
          </gui-chart-tooltip>
          <gui-recharts-bar
            datakey="downloads"
            fill="var(--color-downloads)"
            radius="4"
          >
          </gui-recharts-bar>
          <gui-recharts-x-axis
            datakey="month"
            tickline="false"
            axisline="false"
            tickmargin="8"
            mintickgap="32"
          >
          </gui-recharts-x-axis>
        </gui-recharts-bar-chart>
      </gui-chart-container>
    </div>
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0-beta.1"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0-beta.1
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;

exports[`VersionsTabContent filters versions 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0-beta.1"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0-beta.1
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;

exports[`VersionsTabContent handles missing manifest version 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;

exports[`VersionsTabContent renders an empty state 1`] = `

<gui-tabs-content value="versions">
  <div class="flex h-full min-h-64 w-full items-center justify-center overflow-hidden">
    <div class="flex flex-col items-center justify-center gap-3 text-center">
      <div class="relative flex size-32 items-center justify-center rounded-full bg-secondary/60">
        <gui-history-icon
          classname="absolute z-[4] size-14 text-neutral-500"
          strokewidth="1.25"
        >
        </gui-history-icon>
      </div>
      <div class="flex w-2/3 flex-col items-center justify-center gap-1 break-all text-center">
        <p class="w-full text-pretty text-sm text-muted-foreground">
          There is no versioning information about this package yet
        </p>
      </div>
    </div>
  </div>
</gui-tabs-content>

`;

exports[`VersionsTabContent renders with versions 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0-beta.1"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0-beta.1
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;

exports[`VersionsTabContent toggles pre-releases 1`] = `

<gui-tabs-content value="versions">
  <section class="flex flex-col gap-2 px-6 py-4">
    <div class="mb-3 flex items-center gap-2">
      <div class="relative flex w-full items-center justify-start">
        <gui-search-icon
          classname="absolute ml-3 text-muted-foreground"
          size="16"
        >
        </gui-search-icon>
        <gui-input
          placeholder="Filter versions"
          value
          classname="h-9 pl-9"
        >
        </gui-input>
      </div>
      <gui-dropdown-menu>
        <gui-dropdown-menu-trigger aschild="true">
          <gui-button
            variant="outline"
            classname="h-9 w-fit justify-between gap-2 text-sm [&amp;>[data-chevron]]:aria-expanded:rotate-90"
          >
            <gui-list-filter-icon size="16">
            </gui-list-filter-icon>
            <span class="text-sm font-normal">
              Filter
            </span>
            <gui-chevron-right-icon
              data-chevron="true"
              classname="transition-transform duration-150"
              size="16"
            >
            </gui-chevron-right-icon>
          </gui-button>
        </gui-dropdown-menu-trigger>
        <gui-dropdown-menu-content align="end">
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide pre-releases
          </gui-dropdown-menu-checkbox-item>
          <gui-dropdown-menu-checkbox-item checked="false">
            Hide older versions
          </gui-dropdown-menu-checkbox-item>
        </gui-dropdown-menu-content>
      </gui-dropdown-menu>
    </div>
    <div class="relative mt-2 flex flex-col gap-2">
      <div class="hidden cursor-default grid-cols-12 gap-3 pb-2 xl:grid">
        <div class="col-span-2 flex w-full items-center justify-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Version
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 ml-1 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Size
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Published Date
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-2 w-full text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Downloads
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
        <div class="col-span-3 flex w-full items-center justify-center text-center">
          <button class="relative z-[1] inline-flex w-fit cursor-default items-center justify-center gap-2 text-nowrap text-sm text-muted-foreground transition-all duration-300 after:absolute after:left-[-0.75rem] after:z-[-1] after:h-[calc(100%+0.5rem)] after:w-[calc(100%+1.5rem)] after:rounded-sm after:bg-transparent after:content-[''] hover:text-foreground hover:after:bg-muted">
            <span>
              Publisher
            </span>
            <gui-arrow-up-down-icon size="16">
            </gui-arrow-up-down-icon>
          </button>
        </div>
      </div>
      <div class="flex flex-col divide-y-[1px] divide-muted overflow-hidden">
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="2.0.0-beta.1"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                2.0.0-beta.1
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center hidden xl:flex">
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div class="group/item flex cursor-default grid-cols-12 flex-col gap-3 rounded-sm py-4 text-foreground transition-colors first:border-t-[0px] xl:grid xl:gap-3 xl:px-2 xl:py-1.5 xl:hover:bg-muted">
            <div class="order-1 col-span-2 flex w-full flex-col justify-center gap-1 xl:justify-center xl:gap-0">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Version
              </p>
              <gui-inline-code
                tooltipduration="150"
                displaytooltip="true"
                tooltip="1.0.0"
                classname="mx-0 w-fit max-w-none truncate break-all text-sm xl:w-fit xl:max-w-[5.5rem]"
                variant="mono"
              >
                1.0.0
              </gui-inline-code>
            </div>
            <div class="order-2 col-span-2 flex w-full flex-col gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Size
              </p>
              <p class="font-mono text-sm">
                121 KB
              </p>
            </div>
            <div class="order-4 col-span-3 flex w-full flex-col gap-2 xl:order-3 xl:items-center xl:justify-center xl:gap-0 xl:text-center">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Published Date
              </p>
              <div class="flex gap-2 xl:hidden">
                <gui-avatar classname="size-5">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-5 h-full w-5 w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <p class="col-span-4 font-mono text-sm">
                  John Doe
                </p>
                <p class="ml-2 inline-flex font-mono text-sm text-muted-foreground xl:hidden">
                  1 day ago
                </p>
              </div>
              <gui-tooltip-provider>
                <gui-tooltip>
                  <gui-tooltip-trigger classname="hidden cursor-default font-mono text-sm xl:inline-flex">
                    1 day ago
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    2025-04-15
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <div class="order-3 col-span-2 w-full flex-col justify-start gap-2 xl:items-center xl:justify-center xl:gap-0 xl:text-center flex">
              <p class="text-sm font-medium text-muted-foreground xl:hidden">
                Downloads
              </p>
              <p class="font-mono text-sm">
                123,456
              </p>
            </div>
            <div class="order-3 col-span-3 flex hidden w-full items-center justify-center xl:order-4 xl:flex">
              <div class="flex w-full items-center justify-center gap-2">
                <gui-avatar classname="flex size-5 items-center justify-center">
                  <gui-avatar-image
                    classname="rounded-sm outline outline-[1px] outline-border"
                    src="https://example.com/avatar.jpg"
                  >
                  </gui-avatar-image>
                  <gui-avatar-fallback classname="h-full w-full rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 px-[10px] outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
                  </gui-avatar-fallback>
                </gui-avatar>
                <gui-tooltip-provider>
                  <gui-tooltip delayduration="150">
                    <gui-tooltip-trigger classname="cursor-default">
                      <p class="truncate font-mono text-sm">
                        John Doe
                      </p>
                    </gui-tooltip-trigger>
                    <gui-tooltip-content>
                      John Doe
                    </gui-tooltip-content>
                  </gui-tooltip>
                </gui-tooltip-provider>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</gui-tabs-content>

`;
